# starry-bot

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
core/interface/: Cargo.toml  build.rs  manifest.xml  tauri.conf.json
core/interface/capabilities/: default.json
core/interface/src/: lib.rs  main.rs  state.rs
core/interface/src/services/: graphics_capture.rs  image_processing.rs  minimap.rs  minimap_v2.rs  mod.rs
core/ui/: Cargo.toml  README.md  build.rs
core/ui/src/: main.rs
core/web/: package.json  pnpm-lock.yaml
core/web/src/routes/: +page.svelte
scripts/: buildNumber.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
