[workspace]
resolver = "2"
members = [ "core/interface", "core/platforms", "core/ui"]

[workspace.package]
version = "0.21.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.45.1", default-features = false, features = [
  "sync",
  "rt-multi-thread",
  "macros",
  "time",
  "test-util",
] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
