[package]
name = "interface"
version = "0.1.0"
description = "Starry Bot Backend"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
platforms = { path = "../platforms" }
tokio = { workspace = true }
async-trait = "0.1.89"
image = { version = "0.25.6", features = ["webp"] }
opencv = { version = "0.95.1", default-features = false, features = ["dnn", "imgcodecs", "imgproc", "highgui"] }
chrono = "0.4.41"

[features]
default = []
local = []
