[package]
name = "ui"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "image"] }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
interface = { path = "../interface" }
platforms = { path = "../platforms" }
log = "0.4"
env_logger = "0.11"

[features]
default = []
local = []
